fixed favorites by league
